updated error side of usrl shortner

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,1 +1,5 @@
-<h1>Url Shortner</h1>
+<form method="POST" class="post-form">{% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="save btn btn-default">Save</button>
+</form>
+<h1>{{ a }}</h1>
